# simple_OpenCL_test

./: CMakeLists.txt  README.md  main_test.cpp  test_kernel.cl
